# todo_test_2_normal_db

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_02_12_1919-7621ac6d18b0_init_migrations.py
todo_test_2_normal_db/: __init__.py  __main__.py  config.py  dependencies.py  models.py  routes.py
